--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+<app-toolbar class="navbar navbar-expand-lg navbar-light bg-light"></app-toolbar>
+
 <div class="container">
-  <app-toolbar class="navbar navbar-expand-lg navbar-light bg-light"></app-toolbar>
   <div class="row">
-  <app-navbar class="col-2"></app-navbar>
+  <app-navbar class="col-2" id="nav"></app-navbar>
   <app-content class="col-10"></app-content>
 </div>
   </div>
