--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -38,5 +38,22 @@
         </div>
        
         </div>
+    </div>
+
+        <h1>Alta Usuario</h1>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-formulario (addUsuario)="agregarUsuario($event)"></app-formulario>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+              <app-table
+              [usuarios]="usuarios"></app-table>  
+            </div>
+        </div>
+    </div>
         
-</div>
+
