--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,5 @@
     padding-bottom: 0.5rem;
     flex-direction: column;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
