--- a/src/app/component/content/content.component.html
+++ b/src/app/component/content/content.component.html
@@ -1,26 +1,4 @@
-<div class="row" id="rowcard">
-    <div class="card" id="cards" style="width: 18rem;">
-        <img src="../../../assets/images/icon1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">CURSO PILOTO</h5>
-        <button class="btn btn-primary" id="botoneleccion">ACCEDER</button>
-        </div>
-    </div>
-    <div class="card" id="cards" style="width: 18rem;">
-        <img src="../../../assets/images/icon2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">PROGRAMACION</h5>
-        <button class="btn btn-primary" id="botoneleccion">ACCEDER</button>
-        </div>
-    </div>
-    <div class="card" id="cards" style="width: 18rem;">
-        <img src="../../../assets/images/icon3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">SEGURIDAD</h5>
-        <button class="btn btn-primary" id="botoneleccion">ACCEDER</button>
-        </div>
-    </div>
-</div>
+
     <h1>Alumnos Inscriptos</h1>
 
     <div class="row" id="rowcard">
@@ -56,4 +34,7 @@
         </div>
     </div>
         
-
+    <div class="container">
+        
+      <app-card-cursos></app-card-cursos>
+    </div>
